fix: Update to word-wrap so that long links flow onto a new line

--- a/wp-content/themes/premedia-theme/assets/sass/global.scss
+++ b/wp-content/themes/premedia-theme/assets/sass/global.scss
@@ -51,6 +51,14 @@
     white-space: nowrap;
 }
 
+// wrap text of long links 
+// ref: https://css-tricks.com/snippets/css/prevent-long-urls-from-breaking-out-of-container/
+p>[href],
+li>[href] {
+    overflow-wrap: break-word;
+    word-wrap: break-word;
+}
+
 
 
 .img-with-corners {
